# smithy-rs

./: CHANGELOG.next.toml  settings.gradle.kts
aws/rust-runtime/aws-auth-providers/src/: chain.rs  default_provider_chain.rs  lib.rs  named.rs  profile.rs  sts_util.rs  web_identity_token.rs
aws/rust-runtime/aws-auth-providers/src/profile/: exec.rs  repr.rs
aws/rust-runtime/aws-auth-providers/test-data/: assume-role-tests-backup.json  assume-role-tests.json
aws/rust-runtime/aws-auth-providers/test-data/web-identity-token/: http-traffic.json
aws/rust-runtime/aws-auth-providers/test-data/web-identity-token-invalid-token/: http-traffic.json
aws/rust-runtime/aws-auth/src/: credentials.rs  middleware.rs  provider.rs
aws/rust-runtime/aws-auth/src/provider/: env.rs
aws/rust-runtime/aws-config/src/: lib.rs  provider_config.rs  test_case.rs
aws/rust-runtime/aws-config/src/imds/: client.rs  region.rs
aws/rust-runtime/aws-config/src/sts/: assume_role.rs
aws/rust-runtime/aws-sig-auth/src/: signer.rs
aws/rust-runtime/aws-types/src/: os_shim_internal.rs  profile.rs  region.rs
aws/rust-runtime/aws-types/src/profile/: source.rs
aws/sdk/: build.gradle.kts  sync-models.py
aws/sdk-codegen/src/main/kotlin/software/amazon/smithy/rustsdk/: AwsCodegenDecorator.kt  AwsFluentClientDecorator.kt  SigV4SigningDecorator.kt
aws/sdk/examples/dynamo-list-tables/: Cargo.toml
aws/sdk/examples/dynamo-list-tables/src/: main.rs
aws/sdk/examples/iot/: Cargo.toml
codegen-client/src/main/kotlin/software/amazon/smithy/rust/codegen/client/smithy/: RustCodegenPlugin.kt  StreamingTraitSymbolProvider.kt
codegen-core/common-test-models/: constraints.smithy  unique-items.smithy
codegen-core/src/main/kotlin/software/amazon/smithy/rust/codegen/core/rustlang/: RustType.kt
codegen-core/src/main/kotlin/software/amazon/smithy/rust/codegen/core/smithy/: SymbolMetadataProvider.kt
codegen-server-test/: build.gradle.kts
codegen-server/src/main/kotlin/software/amazon/smithy/rust/codegen/server/smithy/: ConstrainedShapeSymbolProvider.kt  ConstraintViolationSymbolProvider.kt  Constraints.kt  RustCodegenServerPlugin.kt  (+4 more)
codegen-simple/: build.gradle.kts
codegen-simple-test/: build.gradle.kts
codegen/src/main/kotlin/software/amazon/smithy/rust/codegen/rustlang/: CargoDependency.kt  RustReservedWords.kt
codegen/src/main/kotlin/software/amazon/smithy/rust/codegen/smithy/: RuntimeTypes.kt  RustSettings.kt  SymbolVisitor.kt
rust-runtime/aws-smithy-http-server/: Cargo.toml
rust-runtime/aws-smithy-http-server/src/: body.rs  clone_box_service.rs  error.rs  extractors.rs  lib.rs  main.rs  model.rs  operation_registry.rs  responders.rs  runtime.rs
rust-runtime/aws-smithy-http-server/src/handler/: mod.rs
rust-runtime/aws-smithy-http-server/src/routing/: into_make_service.rs  mod.rs  operation_handler.rs  request_spec.rs  route.rs
rust-runtime/aws-smithy-server/: Cargo.toml
rust-runtime/aws-smithy-server/src/: body.rs  clone_box_service.rs  error.rs  extractors.rs  lib.rs  macros.rs  main.rs  operation_registry.rs  responders.rs  router.rs  runtime.rs  service.rs
rust-runtime/aws-smithy-server/src/routing/: future.rs  into_make_service.rs  method_not_allowed.rs  method_router.rs  mod.rs  not_found.rs  operation_handler.rs  request_spec.rs  route.rs
rust-runtime/smithy-client/src/: bounds.rs  builder.rs  erase.rs  hyper_impls.rs  lib.rs  test_connection.rs
rust-runtime/smithy-server/: Cargo.toml
rust-runtime/smithy-server/src/: extractors.rs  lib.rs  model.rs
(+15 files in other folders)
